# docs/swagger.yaml
@@ -92,6 +92,10 @@ definitions:
     type: object
   response.AppealComment:
     properties:
+      appeal_comment_photos:
+        items:
+          $ref: '#/definitions/response.AppealCommentPhoto'
+        type: array
       date:
         example: "2024-02-10T00:00:00+05:00"
         type: string
@@ -122,6 +126,15 @@ definitions:
       total:
         example: 100
         type: integer
+    type: object
+  response.AppealCommentPhoto:
+    properties:
+      id:
+        example: 1
+        type: integer
+      url:
+        example: https://storage.yandexcloud.net/urbathon/test.jpg
+        type: string
     type: object
   response.AppealPaged:
     properties:
@@ -398,7 +411,7 @@ paths:
       summary: update appeal
       tags:
       - appeal
-  /appeal/{id}/comments:
+  /appeal/{id}/comment:
     get:
       description: get appeal comments
       parameters:
@@ -438,7 +451,47 @@ paths:
             $ref: '#/definitions/errorHandler.HttpErr'
       summary: get appeal comments
       tags:
-      - appeal
+      - appealComment
+    post:
+      consumes:
+      - multipart/form-data
+      description: create comment appeal
+      parameters:
+      - default: 1
+        description: appeal id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - example: Текст кооментария
+        in: formData
+        name: text
+        type: string
+      - collectionFormat: csv
+        description: photos
+        in: formData
+        items:
+          type: file
+        name: photos
+        type: array
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/response.AppealComment'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/errorHandler.HttpErr'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errorHandler.HttpErr'
+      summary: create comment appeal
+      tags:
+      - appealComment
   /appeal/{id}/status/{status_id}:
     post:
       description: update appeal status
