# internal/app/model/entity/AppealComment.go
@@ -5,5 +5,6 @@ import "urbathon-backend-2023/.gen/urbathon/public/model"
 type AppealComment struct {
 	model.AppealComments
 
-	User *model.Users `json:"user"`
+	User                *model.Users                 `json:"user"`
+	AppealCommentPhotos *[]model.AppealCommentPhotos `json:"appeal_comment_photos"`
 }
