# internal/app/model/input/AppealComment.go
@@ -1,0 +1,8 @@
+package input
+
+import "mime/multipart"
+
+type AppealComment struct {
+	Text   *string                 `form:"text" example:"Текст кооментария"`
+	Photos *[]multipart.FileHeader `form:"photos" swaggerignore:"true"`
+}
